{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 35,
  "lineage": "a9db2723-7d72-916a-e5ab-e42c4b074925",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demoinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b644b4d078605bd",
            "arn": "arn:aws:ec2:ap-south-2:599363352918:instance/i-02e29589479ed6054",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e29589479ed6054",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf5a37e07da4c1e1",
            "private_dns": "ip-10-0-2-85.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.85",
            "public_ip": "18.60.109.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02d27e259eeeef7c9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00098013f8c93e7f2",
            "tags": {
              "Name": "My Public Instance"
            },
            "tags_all": {
              "Name": "My Public Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-096ec91ee3d00e9da"
            ]
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demoinstance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b644b4d078605bd",
            "arn": "arn:aws:ec2:ap-south-2:599363352918:instance/i-054fdead569a8afe4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054fdead569a8afe4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ca2952bc1b449b45",
            "private_dns": "ip-10-0-3-35.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.35",
            "public_ip": "18.60.144.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aa2b180f6876d86c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5bc9bfa17875a4f",
            "tags": {
              "Name": "My Public Instance 2"
            },
            "tags_all": {
              "Name": "My Public Instance 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-096ec91ee3d00e9da"
            ]
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demogateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:599363352918:internet-gateway/igw-0b84c6aae594ba6df",
            "id": "igw-0b84c6aae594ba6df",
            "owner_id": "599363352918",
            "vpc_id": "vpc-0747a815bf50eaf8b"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:599363352918:loadbalancer/app/External-LB/3373193de8374f78",
            "arn_suffix": "app/External-LB/3373193de8374f78",
            "desync_mitigation_mode": "defensive",
            "dns_name": "External-LB-162379540.ap-south-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-2:599363352918:loadbalancer/app/External-LB/3373193de8374f78",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "External-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-096ec91ee3d00e9da"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00098013f8c93e7f2"
              },
              {
                "subnet_id": "subnet-0b5bc9bfa17875a4f"
              }
            ],
            "subnets": [
              "subnet-00098013f8c93e7f2",
              "subnet-0b5bc9bfa17875a4f"
            ],
            "vpc_id": "vpc-0747a815bf50eaf8b",
            "zone_id": "Z0173938T07WNTVAEPZN"
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:599363352918:listener/app/External-LB/3373193de8374f78/05b7035f14d14175",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:599363352918:targetgroup/ALB-TG/9a3e87660ae74be5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:599363352918:listener/app/External-LB/3373193de8374f78/05b7035f14d14175",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-2:599363352918:loadbalancer/app/External-LB/3373193de8374f78",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external-alb",
            "aws_lb_target_group.target-elb",
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:599363352918:targetgroup/ALB-TG/9a3e87660ae74be5",
            "arn_suffix": "targetgroup/ALB-TG/9a3e87660ae74be5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:599363352918:targetgroup/ALB-TG/9a3e87660ae74be5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0747a815bf50eaf8b"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-2:599363352918:targetgroup/ALB-TG/9a3e87660ae74be5-20230102100558149500000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:599363352918:targetgroup/ALB-TG/9a3e87660ae74be5",
            "target_id": "i-02e29589479ed6054"
          },
          "dependencies": [
            "aws_instance.demoinstance",
            "aws_lb_target_group.target-elb",
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-2:599363352918:targetgroup/ALB-TG/9a3e87660ae74be5-20230102101335007500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:599363352918:targetgroup/ALB-TG/9a3e87660ae74be5",
            "target_id": "i-054fdead569a8afe4"
          },
          "dependencies": [
            "aws_instance.demoinstance1",
            "aws_lb_target_group.target-elb",
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:599363352918:route-table/rtb-0f7ecb3656321d073",
            "id": "rtb-0f7ecb3656321d073",
            "owner_id": "599363352918",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b84c6aae594ba6df",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route to internet"
            },
            "tags_all": {
              "Name": "Route to internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0747a815bf50eaf8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cae95f4e7d0d1966",
            "route_table_id": "rtb-0f7ecb3656321d073",
            "subnet_id": "subnet-00098013f8c93e7f2"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_route_table.route",
            "aws_subnet.public-subnet-1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8a52822e1da482d",
            "route_table_id": "rtb-0f7ecb3656321d073",
            "subnet_id": "subnet-0b5bc9bfa17875a4f"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_route_table.route",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:599363352918:security-group/sg-0b68414e6b9ef3982",
            "description": "Allow inbound traffic from application layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0b68414e6b9ef3982",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from application layer",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-096ec91ee3d00e9da"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database SG",
            "name_prefix": "",
            "owner_id": "599363352918",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database SG"
            },
            "tags_all": {
              "Name": "Database SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0747a815bf50eaf8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demosg",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demosg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:599363352918:security-group/sg-096ec91ee3d00e9da",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096ec91ee3d00e9da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230102095923710500000001",
            "name_prefix": "terraform-",
            "owner_id": "599363352918",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web SG"
            },
            "tags_all": {
              "Name": "Web SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0747a815bf50eaf8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:599363352918:subnet/subnet-0c457d0e274cd4b05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c457d0e274cd4b05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "599363352918",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application Subnet 1"
            },
            "tags_all": {
              "Name": "Application Subnet 1"
            },
            "vpc_id": "vpc-0747a815bf50eaf8b"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:599363352918:subnet/subnet-011c3c52f80036311",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2c",
            "availability_zone_id": "aps2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011c3c52f80036311",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "599363352918",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application Subnet 2"
            },
            "tags_all": {
              "Name": "Application Subnet 2"
            },
            "vpc_id": "vpc-0747a815bf50eaf8b"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:599363352918:subnet/subnet-0ba8699abef21163e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba8699abef21163e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "599363352918",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database Subnet 1"
            },
            "tags_all": {
              "Name": "Database Subnet 1"
            },
            "vpc_id": "vpc-0747a815bf50eaf8b"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:599363352918:subnet/subnet-03cc55b3ddad94344",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cc55b3ddad94344",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "599363352918",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database Subnet 1"
            },
            "tags_all": {
              "Name": "Database Subnet 1"
            },
            "vpc_id": "vpc-0747a815bf50eaf8b"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:599363352918:subnet/subnet-00098013f8c93e7f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00098013f8c93e7f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "599363352918",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web Subnet 1"
            },
            "tags_all": {
              "Name": "Web Subnet 1"
            },
            "vpc_id": "vpc-0747a815bf50eaf8b"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:599363352918:subnet/subnet-0b5bc9bfa17875a4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5bc9bfa17875a4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "599363352918",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web Subnet 2"
            },
            "tags_all": {
              "Name": "Web Subnet 2"
            },
            "vpc_id": "vpc-0747a815bf50eaf8b"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demovpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:599363352918:vpc/vpc-0747a815bf50eaf8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-066b7fce1e10984df",
            "default_route_table_id": "rtb-0f8cb65bca51ea0f2",
            "default_security_group_id": "sg-0639ffa933d5bfd6f",
            "dhcp_options_id": "dopt-04a3ff4915ce4e43c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0747a815bf50eaf8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8cb65bca51ea0f2",
            "owner_id": "599363352918",
            "tags": {
              "Name": "Demo VPC"
            },
            "tags_all": {
              "Name": "Demo VPC"
            }
          }
        }
      ]
    }
  ]
}